--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Git view</h1>
+    <input type="text" placeholder="Enter Text">
+    <button>click</button>
     <script src="index.js"></script>
 </body>
 </html>
